= LitleOnline CHANGELOG
==Version 11.0.1 (Apr 20, 2017)
* Feature: update commons-io and http-client versions
* Feature: disable auto retry in HTTP client connection

==Version 11.0 (Apr 12, 2017)
* Feature: implement Vantiv eCommerce XMLv11.0
* Feature: SEPA Support
* Feature: iDEAL support
* Feature: new giftCard transactions
* Feature: giroPay support
* Feature: Network Enhancements mandates
* Feature: add support for raw network response
* Bug fix: specify char encoding in HTTP header

==Version 10.1.1 (June 7, 2016)
Add method to close file resources

==Version 9.3.2
HTTP timeout set to 500ms

==Version 9.3.1 (March 9, 2015)
*Feature: PFIF instruction transaction was added

==Version 9.3.0 (February 13, 2015)
*Feature: Applepay support was added
*Feature: Secondary amount support was added
*Feature: Wallet support was added
*Feature: EcheckPreNoteSale batch transaction type support was added
*Feature: EcheckPreNoteCredit batch transaction type support was added

==Version 9.0.0 (August 26, 2014)
*Support version 9
*modify xsd

== Version 8.27.0 (August 26, 2014)
* Add samples in the build
* modify xsd

== Version 8.25.4 (June 6, 2014)
* Feature: Migrate build to Gradle

== Version 8.25.3 (May 1, 2014)
* Bug: Using the LitleResponseProcessor to check for responses would never work with EcheckSales.
* Feature: Make it possible to load properties file from classpath

== Version 8.25.2 (April 3, 2014)
* Feature: Add support to multi step SFTP batching. Now this process can be done in up to three steps: generate batch file, send file and retrieve file.
* Feature: Improved performance when creating multiple instances of LitleOnline. 

== Version 8.25.1 (March 21, 2014)
* Bugfix: delete the reports directory on clean in build.xml

== Version 8.25.0 (March 6,2014)
* Feature: Added support for ROAM: Authorization, ForceCapture, CaptureGivenAuth, Sale, Credit

== Version 8.24.0 (February 5,2014)