@@ -6,3 +6,4 @@ test/
 .classpath
 .project
 .settings/
+.idea/*.xml
