@@ -773,8 +773,17 @@ public class LitleOnline {
 			}
 
 			LitleOnlineResponse response = (LitleOnlineResponse)LitleContext.getJAXBContext().createUnmarshaller().unmarshal(new StringReader(xmlResponse));
-			if("1".equals(response.getResponse())) {
-				throw new LitleOnlineException(response.getMessage());
+			// non-zero responses indicate a problem
+			if(!"0".equals(response.getResponse())) {
+				if ("2".equals(response.getResponse()) || "3".equals(response.getResponse())) {
+					throw new VantivInvalidCredentialException(response.getMessage());
+				} else if ("4".equals(response.getResponse())) {
+					throw new VantivConnectionLimitExceededException(response.getMessage());
+				} else if ("5".equals(response.getResponse())) {
+					throw new VantivObjectionableContentException(response.getMessage());
+				} else {
+					throw new LitleOnlineException(response.getMessage());
+				}
 			}
 			return response;
 		} catch(JAXBException ume) {
