@@ -3,6 +3,6 @@ package com.litle.sdk;
 public class Versions {
 
     public static final String XML_VERSION="11.0";
-    public static final String SDK_VERSION="Java;11.0.0";
+    public static final String SDK_VERSION="Java;11.0.1";
 
 }
