@@ -1,7 +1,9 @@
 = LitleOnline CHANGELOG
+
 ==Version 11.0.1 (Apr 20, 2017)
 * Feature: update commons-io and http-client versions
 * Feature: disable auto retry in HTTP client connection
+* Feature: add specific events for Open access error responses
 
 ==Version 11.0 (Apr 12, 2017)
 * Feature: implement Vantiv eCommerce XMLv11.0
